--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "langchain": "^0.0.39",
+    "langchain": "^0.0.73",
+    "serpapi": "^1.1.1",
     "tsup": "^6.7.0"
   },
   "devDependencies": {
