--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.1.5",
+    "async-batch": "^1.1.2",
     "dotenv": "^16.0.3",
+    "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.73",
     "serpapi": "^1.1.1",
     "tsup": "^6.7.0"
