--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tsup": "tsup",
     "build": "tsup",
     "start": "tsx -r dotenv/config src/index.ts",
+    "parse": "tsx -r dotenv/config src/parseTargetDocs.ts",
     "lint": "eslint src",
     "lint:fix": "npm run lint --fix",
     "format": "prettier --write \"**/*.ts\"",
@@ -32,6 +33,7 @@
     "dotenv": "^16.0.3",
     "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.73",
+    "pdf-parse": "^1.1.1",
     "serpapi": "^1.1.1",
     "tsup": "^6.7.0"
   },
